force-app/main/default/objects/Reader__c/Reader__c.object-meta.xml
<CustomObject>
    <label>Reader</label>
    <nameField>
        <displayFormat>RDR-{000000}</displayFormat>
        <label>Library ID Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>