force-app/main/default/objects/Reader__c/fields/Active_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Active_Bookings__c</fullName>
    <label>Active Bookings</label>
    <summaryFilterItems>
        <field>Booking__c.Booking_Status__c</field>
        <operation>notContain</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking__c.Reader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>