force-app/main/default/objects/Reader__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select affiliated school for students, and organization for non-students.</inlineHelpText>
    <label>Institution</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Readers</relationshipLabel>
    <relationshipName>Borrowers</relationshipName>
    <type>Lookup</type>
</CustomField>