force-app/main/default/objects/Reader__c/fields/Suspension_Period__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Period__c</fullName>
    <label>Suspension Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>180 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>