force-app/main/default/objects/Reader__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Student__c</columns>
    <columns>Age__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Institution__c</columns>
    <columns>Home_Address__c</columns>
    <columns>Salutation__c</columns>
    <columns>Suspension_Period__c</columns>
    <columns>Middle_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>